--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   margin-left: 10%;
   margin-right: 10%;
   width: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 .logo-img{
   width: 100px;
@@ -23,6 +26,10 @@
 }
 .nav-elements> ul > li {
     padding: 10px;
+    
+}
+.linkTag{
+text-decoration: none;
 }
 .restaurant-body{
   justify-content: center;
@@ -56,6 +63,13 @@
   margin: 10 10 10 10;
   padding: 5;
   box-shadow:  5px 10px #888888;;
+}
+.shimmer-ui{
+   width: 200px;
+    height: 200px;
+    background: lightgrey;
+    margin: 20px;
+  
 }
 .logo{
     width: 100px;
